--- a/style.css
+++ b/style.css
@@ -3,6 +3,7 @@
   display: none;
 }
 
+
 .canvasinput {
   margin: 0;
   width: 100px;
@@ -82,7 +83,6 @@ a:hover {
   margin-left: -30px;
   margin-right: -30px;
   padding-left: 30px;
-  /* box-shadow: inset 24px -1px 0px 0px #7f7486, 0px 2px 5px -2px #7f7486; */
   box-shadow: inset 24px -1px 0px 0px #60357b9c, 0px 2px 5px -2px #7f7486;;
   
   border-radius: 20px 0px 0px 0px;
@@ -97,7 +97,6 @@ a:hover {
   width: 235px;
 }
 #blender_chest {
-  /* float: right; */
 }
 
 #advoflolo_screenshot{
@@ -107,7 +106,7 @@ a:hover {
 }
 #blender_shantae {
   float: right;
-  width: 80%;
+  width: 40%;
 }
 #shantaeref_screenshot {
   float: left;
@@ -116,14 +115,14 @@ a:hover {
 
 #screenshottext{
   text-align: center;
-  flex-grow: 1;
+  
   display: flex;
 
   align-items: center;
 }
 #screenshottext_sub {
-  width: 99%;
-  display: flow-root;
+
+  width: 60%;
 }
 
 .wrapping_div{
@@ -138,23 +137,16 @@ h3, h2, h1 {
   #blender_snake, #blender_snakedown,#blender_chest {
     width: 29vw;
   }
-  /* #blender_shantae {
-     float: right;
-    width: 335px;
-  } */
   #shantaeref_screenshot {
     float: inherit;
     width: 100%;
   }
   #screenshottext {
     text-align: center;
-    flex-grow: 1;
     display: block;
-    align-items: center;
   }
   #screenshottext_sub {
-    width: 99%;
-    display: flow-root;
+    width: 100%;
   }
   #advoflolo_screenshot,#blender_shantae{
     float:inherit;
@@ -165,7 +157,7 @@ h3, h2, h1 {
 @media only screen and (max-width: 800px){
   .post-link {
     font-size: 3vw;
-  }
+  }  
 }
  
 @media only screen and (max-width: 500px){
@@ -228,4 +220,23 @@ animation-timing-function: ease-out;
   100% { 
     transform: rotate(360deg); 
   }
+}
+
+.site-nav .page-link {
+  color: #111;
+  line-height: 1.5;
+  padding: 2px 10px;
+  border-radius: 2px;
+}
+
+.site-nav .page-link:hover {
+  color: #111;
+  line-height: 1.5;
+  box-shadow: 0px 0px 3px black;
+  padding: 2px 10px;
+  border-radius: 2px;
+  animation: example;
+  animation-duration: 0.1s;
+  animation-fill-mode: backwards;
+  animation-timing-function: ease-out;
 }
